# formation-builder

./: .gitignore  Makefile  README.md  app.py  module.json  pyproject.toml
formation/: extract.py  schema.py
static/: style.css
templates/: module.html
